Fixed sidebar scrollspy on FireFox (Chrome still not working). Added more content. Added more examples. Fixed some links.

--- a/css/main.less
+++ b/css/main.less
@@ -22,6 +22,10 @@ h2 {
     margin-top: 4em;
 }
 
+img {
+    .img-responsive;
+}
+
 .jumbotron {
     color: #fff;
     background:
